# ChangeLog for media-video/ffmpeg
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.254 2009/01/15 07:40:25 aballier Exp $

  15 Jan 2009; Alexis Ballier <aballier@gentoo.org>
  ffmpeg-0.4.9_p20081014.ebuild, ffmpeg-0.4.9_p20081219.ebuild,
  ffmpeg-9999.ebuild:
  make sure version.h gets created, bug #252269

  23 Dec 2008; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999.ebuild:
  Sync live ebuild with latest snapshot; merely add speex useflag and remove
  unused make targets

  22 Dec 2008; Raúl Porcel <armin76@gentoo.org>
  ffmpeg-0.4.9_p20081014.ebuild, ffmpeg-0.4.9_p20081219.ebuild:
  arm/ia64 stable wrt #245285

  21 Dec 2008; nixnut <nixnut@gentoo.org> ffmpeg-0.4.9_p20081014.ebuild:
  Stable on ppc wrt bug 245313

  20 Dec 2008; Ferris McCormick <fmccor@gentoo.org>
  ffmpeg-0.4.9_p20081014.ebuild:
  Sparc stable, Security Bug #245313.

  20 Dec 2008; Thomas Anderson <gentoofan23@gentoo.org>
  ffmpeg-0.4.9_p20081014.ebuild:
  stable amd64, security bug #245313

*ffmpeg-0.4.9_p20081219 (19 Dec 2008)

  19 Dec 2008; Alexis Ballier <aballier@gentoo.org>
  +ffmpeg-0.4.9_p20081219.ebuild:
  push a new snapshot

  16 Dec 2008; Jeroen Roovers <jer@gentoo.org>
  ffmpeg-0.4.9_p20081014.ebuild:
  Stable for HPPA (bug #245291).

  16 Dec 2008; Brent Baude <ranger@gentoo.org>
  ffmpeg-0.4.9_p20081014.ebuild:
  Marking ffmpeg-0.4.9_p20081014 ppc64 for bug 245285

  15 Dec 2008; <ssuominen@gentoo.org> ffmpeg-0.4.9_p20081014.ebuild:
  Change faad2 dep. to >= 2.6.1 wrt #251010.

  15 Dec 2008; <ssuominen@gentoo.org> ffmpeg-0.4.9_p20081014.ebuild:
  x86 stable wrt #245285

  13 Dec 2008; <ssuominen@gentoo.org>
  +files/ffmpeg-0.4.9_p20081014-sparc-gcc43.patch,
  ffmpeg-0.4.9_p20081014.ebuild:
  Backport upstream patch for sparc to allow compilation with GCC 4.3 wrt
  #247653.

  12 Dec 2008; Tobias Klausmann <klausman@gentoo.org>
  ffmpeg-0.4.9_p20081014.ebuild: